--- a/style.css
+++ b/style.css
@@ -2,31 +2,35 @@ body {
     font-size: 15pt;
 }
 h1{
-  color: Red;
+font-size: larger;
+  color: darkblue;
 }
-a {
-  text-decoration: none;
-}
-#my-body {
-  color: Blue;
-}
-body {
- background: lightblue;
-  text-align: center 
-  
+#blue-font{
+  color: darkblue;
 }
 
-.profile-img {
+p{
+  font-size: large;
+}
+a{
+  text-decoration: none;
+  color:darkblue;
+}
+body{
+  background: lightgrey;
+  text-align:center;
+  padding:20px;
+  
+}
+.profile-img{
   width: 50%;
   border-radius: 50%;
 }
-
 .btn {
   display: block;
-  color: yellow;
-  padding:10px;
-  background: lime;
+  color: black
+  padding:20px;
+ background:white;
   margin:16px;
-  color:red;
-  box-shadow: 5px 5px blue, 5px 5px red, 15px 15px green
+  box-shadow: 5px 10px #888888;
 }
